# 4d-stem-orientation-mapping

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: clustering.yaml  compare.yaml  dose_sweep.yaml  grain_sweep.yaml  mismatch.yaml  mosaic_sweep.yaml  resolution_sweep.yaml  template_tuning.yaml
data/: README.md
data/sample/: scan_32.npz
docs/: api.md
models/: MODEL_CARD.md  orientnet.pt
notebooks/: tutorial.ipynb
results/: clustering.json  compare.json  dose_sweep.json  grain_sweep.json  metrics.json  mismatch.json  mosaic_sweep.json  resolution_sweep.json  template_tuning.json  training_history.json
scripts/: build_notebook.py  make_figures.py  make_metrics.py  run_all.py
src/orient4d/: __init__.py  benchmark.py  cli.py  cluster.py  io.py  metrics.py  net.py  plots.py  sim.py  template.py  train.py  virtual.py
tests/: test_artifacts.py  test_benchmark.py  test_cli.py  test_cluster.py  test_io.py  test_metrics.py  test_net.py  test_sim.py  test_template.py  test_train.py  test_virtual.py
